--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ h1 {
     justify-content: center;
 }
 
+.play-button {
+    margin: 0 0 30px 0;
+}
+
 .button {
     height: 150px;
     width: 150px;
