--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,10 @@ h1 {
     flex-direction: column;
 }
 
+.check {
+    margin: 30px 0 0 0;
+}
+
 .score {
     display: flex;
     justify-content: space-evenly;
