--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,69 @@
 @import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
+</style>
 
 
 * {
     box-sizing: border-box;
 }
 
+.WebContainer {
+    width: 100%;
+    height: auto;
+}
+
 body {
     text-align: center;
     background-color:rosybrown;
+    height: 100vh;
 }
+
+#show-instructions {
+    display: flex;
+}
+
+#modal {
+	background-color: rgba(0,0,0,0.4);
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 1;
+	overflow: auto;
+}
+
+#modal-textbox {
+	background-color: white;
+	height: 300px;
+	width: 500px;
+	border-radius: 2px;
+	margin: 150px auto;
+	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+	padding: 2%;
+	line-height: 120%;
+	font-family: 'Cabin', sans-serif;
+}
+
+.modal-buttons {
+	padding: 14px 18px;
+	background-color:black;
+	border: none;
+	outline: none;
+	border-radius: 3px;
+	color: white;
+	font-family: 'Zen Dots', cursive;
+	cursor: pointer;
+}
+
 
 h1 {
     margin: 100px 20px 75px 20px;
+    font-family: 'Zen Dots', cursive; 
+}
+
+h2 {
     font-family: 'Zen Dots', cursive; 
 }
 
