--- a/styles.css
+++ b/styles.css
@@ -8,15 +8,16 @@
     box-sizing: border-box;
 }
 
-.WebContainer {
-    width: 100%;
-    height: auto;
-}
 
 body {
     text-align: center;
     background-color:rosybrown;
     height: 100vh;
+    position:fixed;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
 }
 
 #show-instructions {
@@ -59,12 +60,18 @@ body {
 
 
 h1 {
-    margin: 100px 20px 75px 20px;
-    font-family: 'Zen Dots', cursive; 
+    margin: 50px 20px 40px 20px;
+    font-family: 'Zen Dots', cursive;
+    height: 
 }
 
 h2 {
     font-family: 'Zen Dots', cursive; 
+}
+
+.directions {
+    font-family: 'Zen Dots', cursive;
+    font-size: 20px;
 }
 
 .simon {
@@ -101,9 +108,9 @@ h2 {
 }
 
 .check {
-    height: 70px;
+    height: 60px;
     width: 100px;
-    margin: 30px 0 0 0;
+    margin: 40px 0 40px 0;
     border: none;
     font-family: 'Zen Dots', cursive;
     color: white;
