--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@ body {
     text-align: center;
     background-color:rosybrown;
     width: 100%;
-    position:fixed;
+    height: 100%;
+    position: fixed;
     top:0;
     bottom:0;
     left:0;
@@ -77,7 +78,8 @@ h2 {
 }
 
 .game {
-    
+    width: 80%;
+    margin: 0 auto;
 }
 
 
